@@ -1,0 +1,30 @@
+#  ATContentTypes http://sf.net/projects/collective/
+#  Archetypes reimplementation of the CMF core types
+#  Copyright (c) 2003-2004 AT Content Types development team
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with this program; if not, write to the Free Software
+#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA 
+#
+"""RestrainTypes awareness marker interface
+
+$Id: IRestrainTypes.py,v 1.1 2004/06/09 22:31:39 yenzenz Exp $
+""" 
+__author__  = 'Jens Klein'
+__docformat__ = 'restructuredtext'
+
+from interface import Interface
+
+class IRestrainTypes(Interface):
+    """RestrainTypes awareness marker interface
+    """
